Prevent overflow from nav

--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -27,7 +27,7 @@
 .nav {
   list-style: none;
   padding: 0;
-  margin: -0.5rem;
+  margin: -0.5rem 0rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
